# litki

./: .gitignore  Cargo.toml  README.md  litki-commands.edn
.github/: copilot-instructions.md
crates/litki/: Cargo.toml
crates/litki-cli/: Cargo.toml
crates/litki-cli/examples/: scenario1.edn  scenario1.rs  test_harness.rs
crates/litki-cli/src/: main.rs
crates/litki/src/: clojure.rs  lib.rs  plugins.rs  prelude.rs  repl_server.rs  script.rs
crates/litki/src/plugins/: engine.rs  repl_server.rs
crates/litki/src/script/: command.rs  command_buffer.rs  command_factory.rs  command_promise.rs  command_registry.rs
